tests/nightly/function/compile_fail/duplicate_assertion.stderr
error: duplicate assert_pre attribute found
 --> $DIR/duplicate_assertion.rs:9:5
  |
9 |     #[assert_pre(condition("must be bar", reason = "is really bar"))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: combine the list of conditions into one attribute
